[package]
name = "rssl"
version = "0.1.0"
edition = "2021"

[lib]
test = false
doctest = false

[dependencies]
rssl-text = { path = "text" }
rssl-tok = { path = "tok" }
rssl-ast = { path = "ast" }
rssl-ir = { path = "ir" }
rssl-preprocess = { path = "preprocess" }
rssl-lexer = { path = "lexer" }
rssl-parser = { path = "parser" }
rssl-typer = { path = "typer" }

[workspace]
members = [
    "ast",
    "ir",
    "lexer",
    "parser",
    "preprocess",
    "text",
    "tok",
    "typer",
]
