[package]
name = "rssl"
version = "0.1.0"
edition = "2021"

[lib]
test = false
doctest = false

[dependencies]
rssl-text = { path = "text" }
rssl-ast = { path = "ast" }
rssl-ir = { path = "ir" }
rssl-preprocess = { path = "preprocess" }
rssl-lexer = { path = "lexer" }
rssl-parser = { path = "parser" }
rssl-typer = { path = "typer" }
rssl-hlsl = { path = "hlsl" }

[workspace]
members = [
    "ast",
    "ir",
    "lexer",
    "parser",
    "preprocess",
    "text",
    "typer",
    "hlsl",
]
