[package]
name = "rssl"
version = "0.1.0"
edition = "2021"

[lib]
test = false
doctest = false

[dependencies]
rssl-text = { path = "text" }
rssl-ast = { path = "ast" }
rssl-ir = { path = "ir" }
rssl-preprocess = { path = "preprocess" }
rssl-parser = { path = "parser" }
rssl-formatter = { path = "formatter" }
rssl-typer = { path = "typer" }
rssl-hlsl = { path = "hlsl" }

[workspace]
members = [
    "ast",
    "ir",
    "parser",
    "formatter",
    "preprocess",
    "text",
    "typer",
    "hlsl",
]
