[package]
name = "rssl-hlsl"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
rssl-text = { path = "../text" }
rssl-ir = { path = "../ir" }

[dev-dependencies]
rssl-preprocess = { path = "../preprocess" }
rssl-lexer = { path = "../lexer" }
rssl-parser = { path = "../parser" }
rssl-typer = { path = "../typer" }
