[package]
name = "rssl-msl"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[dependencies]
rssl-text = { path = "../text" }
rssl-ast = { path = "../ast" }
rssl-ir = { path = "../ir" }
rssl-formatter = { path = "../formatter" }

[dev-dependencies]
rssl-preprocess = { path = "../preprocess" }
rssl-parser = { path = "../parser" }
rssl-typer = { path = "../typer" }
metal_invoker = { path = "../metal_invoker" }
